# python-project-50

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: Python CI.yml  makefile.yml  tests.yml
gendiff/: cli.py  format_dict_to_str.py  generate_diff.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: file1.yaml  file3.yaml  file4.yaml  info1.yaml  info2.yaml  json_out1.txt
