[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Vladimir Popchenko <pwd70@mail.ru>"]
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
#gendiff = "gendiff.scripts.gendiff"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
